@@ -1,6 +1,6 @@
 url;file;result;test
 -;-;-;freeRouter v22.4.12-cur, done by cs@nop.
--;-;-;2022-04-12 12:38:57, took 00:08:14, with 80 workers, on 2832 cases, 0 failed, 0 traces, 2 retries
+-;-;-;2022-04-12 16:12:41, took 00:08:35, with 80 workers, on 2832 cases, 0 failed, 0 traces, 0 retries
 -;-;-;./rtr.bin
 http://sources.freertr.net/cfg/basic.tst;basic.tst;success;dummy test
 http://sources.freertr.net/cfg/conn-amt01.tst;conn-amt01.tst;success;amt over ipv4
