@@ -12,7 +12,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v22.4.12-cur, done by cs@nop.<br/>
-tested: 2022-04-12 12:38:57, took 00:08:14, with 80 workers, on 2832 cases, 0 failed, 0 traces, 2 retries<br/>
+tested: 2022-04-12 16:12:41, took 00:08:35, with 80 workers, on 2832 cases, 0 failed, 0 traces, 0 retries<br/>
 jvm: ./rtr.bin<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
